--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,5 @@
 **/simulator/
 build/MyLuaGame/frameworks/cocos2d-x/
 build/MyCppGame/cocos2d/
-enginer/cocos2d-x-3.17.2
+enginer/cocos2d-x-3.17.2/**/
+!enginer/cocos2d-x-3.17.2/.gitmodules
